--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <aside class="sidebar-info">
             <img src="assets/AHMEDE-min.jpg" alt="Ahmede Sidi Abderrahmane" class="about-image">
             <h1 class="name">Ahmede Sidi Abderrahmane</h1>
-            <p class="title">Junior Strategic Energy Consultant</p>
+            <p class="title">Junior Energy Consultant</p>
         </aside>
 
         <!-- Navbar -->
@@ -309,7 +309,7 @@
                 <h2>About Me</h2>
 
                 <p>
-                    I am a passionate and analytical Junior Strategic Energy Consultant with a strong foundation in oil and energy,
+                    I am a passionate and analytical Junior  Energy Consultant with a strong foundation in oil and energy,
                     encompassing both economics and engineering. With a degree in Petroleum Engineering and a Master's in Energy
                     Technology Economics and Management from IFP School in Paris, I have experience in analyzing business needs
                     and implementing effective, data-driven solutions.
@@ -633,6 +633,10 @@
              <!-- Image 36 -->
 <div class="portfolio-item">
     <img src="assets/js/image36.jpg" alt="Portfolio Image 36">
+</div>
+             <!-- Image 37 -->
+<div class="portfolio-item">
+    <img src="assets/js/image37.jpg" alt="Portfolio Image 37">
 </div>
          </section>
 
