--- a/index.html
+++ b/index.html
@@ -555,14 +555,14 @@
     <h2>Portfolio</h2>
 
     <!-- Projects Subsection -->
-    <div class="portfolio-subsection">
-        <h3>Projects</h3>
-        <div class="project">
-            <h4>Energy Bulletin</h4>
-            <p>This project focuses on providing insights into energy trends and developments.</p>
-            <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" class="button" target="_blank">See Details</a>
-        </div>
+<div class="portfolio-subsection">
+    <h3>Projects</h3>
+    <div class="project">
+        <h4>Energy Bulletin</h4>
+        <p>This project focuses on providing insights into energy trends and developments. Explore the project by clicking the button below:</p>
+        <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" class="button" target="_blank">See Details</a>
     </div>
+</div>
 
     <!-- Professional Gallery Subsection -->
     <div class="portfolio-subsection">
