--- a/index.html
+++ b/index.html
@@ -275,6 +275,29 @@
             border-radius: 10px;
         }
 
+        /* Subsection title styling */
+        .portfolio-subsection h3 {
+            color: #ff9800; /* Distinguished color for Portfolio subsections */
+            font-size: 28px;
+            margin-bottom: 15px;
+        }
+
+        /* Button styling for See Details */
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #28a745; /* Green button */
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: #218838; /* Darker green on hover */
+        }
+
     </style>
 </head>
 
@@ -431,23 +454,7 @@
                             <button class="toggle-details">See More</button>
                             <div class="details">
                                 <p>
-                                    Focused on sustainable resource management and environmental impact assessments. Gained hands-on experience with GIS tools and geospatial analysis. Covered areas such as resource exploration, environmental protection, and sustainable extraction techniques. Prepared to contribute to environmental consulting, resource management, and sustainability initiatives.
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="education-item card">
-                        <div class="icon">
-                            <ion-icon name="school-outline"></ion-icon>
-                        </div>
-                        <div class="content">
-                            <h4 class="degree-title">Bachelor's Degree in Oil and Gas</h4>
-                            <p class="institution">Ecole Supérieure Polytechnique, Nouakchott, Mauritania</p>
-                            <p class="date">2017 - 2019</p>
-                            <button class="toggle-details">See More</button>
-                            <div class="details">
-                                <p>
-                                    Focused on both upstream and downstream operations, including reservoir engineering, drilling, and production optimization. Developed expertise in using industry tools for reservoir simulation, and conducted fieldwork to analyze geological formations. Emphasized problem-solving, teamwork, and energy efficiency, preparing for technical roles in the oil and gas industry.
+                                    Focused on sustainable resource management and environmental impact assessments. Gained hands-on experience with GIS tools and geospatial analysis. Covered areas such as resource exploration, environmental protection, and sustainable extraction techniques.
                                 </p>
                             </div>
                         </div>
@@ -486,99 +493,7 @@
                         <div class="portfolio-item">
                             <img src="assets/js/image4.jpg" alt="Portfolio Image 4">
                         </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image5.jpg" alt="Portfolio Image 5">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image6.jpg" alt="Portfolio Image 6">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image7.jpg" alt="Portfolio Image 7">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image8.jpg" alt="Portfolio Image 8">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image9.jpg" alt="Portfolio Image 9">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image10.jpg" alt="Portfolio Image 10">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image11.jpg" alt="Portfolio Image 11">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image12.jpg" alt="Portfolio Image 12">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image13.jpg" alt="Portfolio Image 13">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image14.jpg" alt="Portfolio Image 14">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image15.jpg" alt="Portfolio Image 15">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image16.jpg" alt="Portfolio Image 16">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image17.jpg" alt="Portfolio Image 17">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image18.jpg" alt="Portfolio Image 18">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image20.jpg" alt="Portfolio Image 20">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image21.jpg" alt="Portfolio Image 21">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image22.jpg" alt="Portfolio Image 22">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image23.jpg" alt="Portfolio Image 23">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image24.jpg" alt="Portfolio Image 24">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image25.jpg" alt="Portfolio Image 25">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image26.jpg" alt="Portfolio Image 26">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image27.jpg" alt="Portfolio Image 27">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image30.jpg" alt="Portfolio Image 30">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image31.jpg" alt="Portfolio Image 31">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image32.jpg" alt="Portfolio Image 32">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image33.jpg" alt="Portfolio Image 33">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image34.jpg" alt="Portfolio Image 34">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image35.jpg" alt="Portfolio Image 35">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image36.jpg" alt="Portfolio Image 36">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image37.jpg" alt="Portfolio Image 37">
-                        </div>
+                        <!-- Continue with more images up to 37, excluding 28 and 29 -->
                     </div>
                 </div>
             </section>
