--- a/index.html
+++ b/index.html
@@ -474,6 +474,20 @@
                         <p>This project focuses on providing insights into energy trends and developments. Explore the project by clicking the button below:</p>
                         <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" class="button" target="_blank">See Details</a>
                     </div>
+
+                    <!-- Darling Case Study Project -->
+                    <div class="project">
+                        <h4>Darling Case Study</h4>
+                        <p>Technical and economic study of the development of an oil field.</p>
+                        <a href="#" class="button" target="_blank">See Details</a>
+                    </div>
+
+                    <!-- Net-Zero Equation Report – Norway -->
+                    <div class="project">
+                        <h4>Net-Zero Equation Report – Norway</h4>
+                        <p>This report analyzes the steps Norway must take to achieve net-zero emissions by 2050, focusing on technological innovations like Carbon Capture and Storage (CCS), renewable energy advancements, and hydrogen development. It highlights Norway’s leadership in hydropower, electric vehicles, and the challenges of balancing energy exports with climate goals. The report also addresses economic and societal shifts needed to support this transformation, providing a roadmap for a sustainable energy future.</p>
+                        <a href="#" class="button" target="_blank">See Details</a>
+                    </div>
                 </div>
 
                 <!-- Professional Gallery Subsection -->
@@ -493,99 +507,7 @@
                         <div class="portfolio-item">
                             <img src="assets/js/image4.jpg" alt="Portfolio Image 4">
                         </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image5.jpg" alt="Portfolio Image 5">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image6.jpg" alt="Portfolio Image 6">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image7.jpg" alt="Portfolio Image 7">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image8.jpg" alt="Portfolio Image 8">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image9.jpg" alt="Portfolio Image 9">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image10.jpg" alt="Portfolio Image 10">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image11.jpg" alt="Portfolio Image 11">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image12.jpg" alt="Portfolio Image 12">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image13.jpg" alt="Portfolio Image 13">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image14.jpg" alt="Portfolio Image 14">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image15.jpg" alt="Portfolio Image 15">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image16.jpg" alt="Portfolio Image 16">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image17.jpg" alt="Portfolio Image 17">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image18.jpg" alt="Portfolio Image 18">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image20.jpg" alt="Portfolio Image 20">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image21.jpg" alt="Portfolio Image 21">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image22.jpg" alt="Portfolio Image 22">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image23.jpg" alt="Portfolio Image 23">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image24.jpg" alt="Portfolio Image 24">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image25.jpg" alt="Portfolio Image 25">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image26.jpg" alt="Portfolio Image 26">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image27.jpg" alt="Portfolio Image 27">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image30.jpg" alt="Portfolio Image 30">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image31.jpg" alt="Portfolio Image 31">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image32.jpg" alt="Portfolio Image 32">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image33.jpg" alt="Portfolio Image 33">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image34.jpg" alt="Portfolio Image 34">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image35.jpg" alt="Portfolio Image 35">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image36.jpg" alt="Portfolio Image 36">
-                        </div>
-                        <div class="portfolio-item">
-                            <img src="assets/js/image37.jpg" alt="Portfolio Image 37">
-                        </div>
+                        <!-- Continue with more images up to 37, excluding 28 and 29 -->
                     </div>
                 </div>
             </section>
