--- a/index.html
+++ b/index.html
@@ -337,21 +337,6 @@
                     and implementing effective, data-driven solutions.
                 </p>
 
-                <h3>What I Do</h3>
-                <ul class="service-list">
-                    <li class="service-item">
-                        <ion-icon name="analytics-outline" class="service-icon"></ion-icon>
-                        <span>Market Research: I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</span>
-                    </li>
-                    <li class="service-item">
-                        <ion-icon name="clipboard-outline" class="service-icon"></ion-icon>
-                        <span>Strategic Planning: I create strategic plans that align business objectives with the latest energy trends and insights.</span>
-                    </li>
-                    <li class="service-item">
-                        <ion-icon name="stats-chart-outline" class="service-icon"></ion-icon>
-                        <span>Data Analysis: I use advanced data analysis tools to interpret energy market data and enhance performance.</span>
-                    </li>
-                </ul>
             </section>
 
             <!-- Resume Section -->
@@ -469,24 +454,32 @@
                 <!-- Projects Subsection -->
                 <div class="portfolio-subsection">
                     <h3>Projects</h3>
+                    <!-- Energy Bulletin Project -->
                     <div class="project">
                         <h4>Energy Bulletin</h4>
-                        <p>This project focuses on providing insights into energy trends and developments. Explore the project by clicking the button below:</p>
-                        <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" class="button" target="_blank">See Details</a>
+                        <button class="toggle-details">See Details</button>
+                        <div class="details">
+                            <p>This project focuses on providing insights into energy trends and developments.</p>
+                            <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" target="_blank">Explore the project</a>
+                        </div>
                     </div>
 
                     <!-- Darling Case Study Project -->
                     <div class="project">
                         <h4>Darling Case Study</h4>
-                        <p>Technical and economic study of the development of an oil field.</p>
-                        <a href="#" class="button" target="_blank">See Details</a>
+                        <button class="toggle-details">See Details</button>
+                        <div class="details">
+                            <p>Technical and economic study of the development of an oil field.</p>
+                        </div>
                     </div>
 
                     <!-- Net-Zero Equation Report – Norway -->
                     <div class="project">
                         <h4>Net-Zero Equation Report – Norway</h4>
-                        <p>This report analyzes the steps Norway must take to achieve net-zero emissions by 2050, focusing on technological innovations like Carbon Capture and Storage (CCS), renewable energy advancements, and hydrogen development. It highlights Norway’s leadership in hydropower, electric vehicles, and the challenges of balancing energy exports with climate goals. The report also addresses economic and societal shifts needed to support this transformation, providing a roadmap for a sustainable energy future.</p>
-                        <a href="#" class="button" target="_blank">See Details</a>
+                        <button class="toggle-details">See Details</button>
+                        <div class="details">
+                            <p>This report analyzes the steps Norway must take to achieve net-zero emissions by 2050, focusing on technological innovations like Carbon Capture and Storage (CCS), renewable energy advancements, and hydrogen development. It highlights Norway’s leadership in hydropower, electric vehicles, and the challenges of balancing energy exports with climate goals. The report also addresses economic and societal shifts needed to support this transformation, providing a roadmap for a sustainable energy future.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -494,7 +487,7 @@
                 <div class="portfolio-subsection">
                     <h3>Professional Gallery</h3>
                     <div class="portfolio-gallery">
-                        <!-- Images from 1 to 37, excluding 28 and 29 -->
+                        <!-- Displaying all images except image 28 and 29 -->
                         <div class="portfolio-item">
                             <img src="assets/js/image1.jpg" alt="Portfolio Image 1">
                         </div>
@@ -507,7 +500,99 @@
                         <div class="portfolio-item">
                             <img src="assets/js/image4.jpg" alt="Portfolio Image 4">
                         </div>
-                        <!-- Continue with more images up to 37, excluding 28 and 29 -->
+                        <div class="portfolio-item">
+                            <img src="assets/js/image5.jpg" alt="Portfolio Image 5">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image6.jpg" alt="Portfolio Image 6">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image7.jpg" alt="Portfolio Image 7">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image8.jpg" alt="Portfolio Image 8">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image9.jpg" alt="Portfolio Image 9">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image10.jpg" alt="Portfolio Image 10">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image11.jpg" alt="Portfolio Image 11">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image12.jpg" alt="Portfolio Image 12">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image13.jpg" alt="Portfolio Image 13">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image14.jpg" alt="Portfolio Image 14">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image15.jpg" alt="Portfolio Image 15">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image16.jpg" alt="Portfolio Image 16">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image17.jpg" alt="Portfolio Image 17">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image18.jpg" alt="Portfolio Image 18">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image20.jpg" alt="Portfolio Image 20">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image21.jpg" alt="Portfolio Image 21">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image22.jpg" alt="Portfolio Image 22">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image23.jpg" alt="Portfolio Image 23">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image24.jpg" alt="Portfolio Image 24">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image25.jpg" alt="Portfolio Image 25">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image26.jpg" alt="Portfolio Image 26">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image27.jpg" alt="Portfolio Image 27">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image30.jpg" alt="Portfolio Image 30">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image31.jpg" alt="Portfolio Image 31">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image32.jpg" alt="Portfolio Image 32">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image33.jpg" alt="Portfolio Image 33">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image34.jpg" alt="Portfolio Image 34">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image35.jpg" alt="Portfolio Image 35">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image36.jpg" alt="Portfolio Image 36">
+                        </div>
+                        <div class="portfolio-item">
+                            <img src="assets/js/image37.jpg" alt="Portfolio Image 37">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -551,15 +636,14 @@
         // Show the "About" section by default
         document.getElementById('about').classList.add('active');
 
-        // Toggle details functionality for resume section
+        // Toggle details functionality for portfolio section
         const toggleButtons = document.querySelectorAll('.toggle-details');
-
         toggleButtons.forEach(button => {
             button.addEventListener('click', () => {
                 const details = button.nextElementSibling;
                 if (details.classList.contains('active')) {
                     details.classList.remove('active');
-                    button.textContent = 'See More';
+                    button.textContent = 'See Details';
                 } else {
                     details.classList.add('active');
                     button.textContent = 'See Less';
