--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             margin-bottom: 15px;
         }
 
-        /* Button styling for See Details */
+        /* Button styling for See details */
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -337,6 +337,21 @@
                     and implementing effective, data-driven solutions.
                 </p>
 
+                <h3>What I Do</h3>
+                <ul class="service-list">
+                    <li class="service-item">
+                        <ion-icon name="analytics-outline" class="service-icon"></ion-icon>
+                        <span>Market Research: I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</span>
+                    </li>
+                    <li class="service-item">
+                        <ion-icon name="clipboard-outline" class="service-icon"></ion-icon>
+                        <span>Strategic Planning: I create strategic plans that align business objectives with the latest energy trends and insights.</span>
+                    </li>
+                    <li class="service-item">
+                        <ion-icon name="stats-chart-outline" class="service-icon"></ion-icon>
+                        <span>Data Analysis: I use advanced data analysis tools to interpret energy market data and enhance performance.</span>
+                    </li>
+                </ul>
             </section>
 
             <!-- Resume Section -->
@@ -457,7 +472,7 @@
                     <!-- Energy Bulletin Project -->
                     <div class="project">
                         <h4>Energy Bulletin</h4>
-                        <button class="toggle-details">See Details</button>
+                        <button class="toggle-details">See details</button>
                         <div class="details">
                             <p>This project focuses on providing insights into energy trends and developments.</p>
                             <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" target="_blank">Explore the project</a>
@@ -467,7 +482,7 @@
                     <!-- Darling Case Study Project -->
                     <div class="project">
                         <h4>Darling Case Study</h4>
-                        <button class="toggle-details">See Details</button>
+                        <button class="toggle-details">See details</button>
                         <div class="details">
                             <p>Technical and economic study of the development of an oil field.</p>
                         </div>
@@ -476,7 +491,7 @@
                     <!-- Net-Zero Equation Report – Norway -->
                     <div class="project">
                         <h4>Net-Zero Equation Report – Norway</h4>
-                        <button class="toggle-details">See Details</button>
+                        <button class="toggle-details">See details</button>
                         <div class="details">
                             <p>This report analyzes the steps Norway must take to achieve net-zero emissions by 2050, focusing on technological innovations like Carbon Capture and Storage (CCS), renewable energy advancements, and hydrogen development. It highlights Norway’s leadership in hydropower, electric vehicles, and the challenges of balancing energy exports with climate goals. The report also addresses economic and societal shifts needed to support this transformation, providing a roadmap for a sustainable energy future.</p>
                         </div>
@@ -643,7 +658,7 @@
                 const details = button.nextElementSibling;
                 if (details.classList.contains('active')) {
                     details.classList.remove('active');
-                    button.textContent = 'See Details';
+                    button.textContent = 'See details';
                 } else {
                     details.classList.add('active');
                     button.textContent = 'See Less';
