--- a/index.html
+++ b/index.html
@@ -612,22 +612,52 @@
                 </div>
             </section>
 
-            <!-- Contact Section -->
-            <section id="contact">
-                <h2>Contact Form</h2>
-                <form class="contact-form" method="POST" action="https://formspree.io/f/mrbgbzzy">
-                    <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
-                    <input type="email" name="email" class="form-input" placeholder="Email address" required>
-                    <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
-                    <button class="form-btn" type="submit">
-                        <ion-icon name="paper-plane"></ion-icon>
-                        <span>Send Message</span>
-                    </button>
-                </form>
-            </section>
 
-        </div>
 
+<!-- Contact Section -->
+<section id="contact">
+    <h2>Contact Me</h2>
+
+    <!-- Contact Form -->
+    <form class="contact-form" method="POST" action="https://formspree.io/f/mrbgbzzy">
+        <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
+        <input type="email" name="email" class="form-input" placeholder="Email address" required>
+        <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
+        <button class="form-btn" type="submit">
+            <ion-icon name="paper-plane"></ion-icon>
+            <span>Send Message</span>
+        </button>
+    </form>
+
+    <!-- Social Links Section -->
+    <div class="social-links">
+        <h3>Find me on</h3>
+        <a href="https://www.linkedin.com/in/ahmede-s-99b70314b" target="_blank">
+            <ion-icon name="logo-linkedin" style="font-size: 24px;"></ion-icon> LinkedIn
+        </a>
+    </div>
+
+    <!-- Address and Google Maps Embed -->
+    <div class="address-map">
+        <h3>My Location</h3>
+        <p>Greater Paris Region</p>
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41979.19952201557!2d2.252058798341837!3d48.85661446227485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66dfecaec1c4f%3A0x9dbb7e8d1c4a951!2sGreater%20Paris%2C%20France!5e0!3m2!1sen!2s!4v1697808931648!5m2!1sen!2s" 
+            width="100%" 
+            height="400" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+</section>
+
+
+
+
+            
+        
     </main>
 
     <!-- JavaScript Links -->
