--- a/index.html
+++ b/index.html
@@ -326,33 +326,72 @@
         <!-- Main Content -->
         <div class="main-content">
 
-            <!-- About Section -->
-            <section id="about" class="active">
-                <h2>About Me</h2>
+           <!-- About Section -->
+<section id="about">
+    <h2>About Me</h2>
+    <p>I am a passionate and analytical Junior Energy Consultant with a strong foundation in oil and energy,
+       encompassing both economics and engineering. With a degree in Petroleum Engineering and a Master's in Energy
+       Technology Economics and Management from IFP School in Paris, I have experience in analyzing business needs
+       and implementing effective, data-driven solutions.
+    </p>
 
-                <p>
-                    I am a passionate and analytical Junior Energy Consultant with a strong foundation in oil and energy,
-                    encompassing both economics and engineering. With a degree in Petroleum Engineering and a Master's in Energy
-                    Technology Economics and Management from IFP School in Paris, I have experience in analyzing business needs
-                    and implementing effective, data-driven solutions.
-                </p>
+    <h3>What I Do</h3>
+    <ul class="service-list">
+        <li class="service-item">
+            <ion-icon name="analytics-outline" class="service-icon"></ion-icon>
+            <span>Market Research: I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</span>
+        </li>
+        <li class="service-item">
+            <ion-icon name="clipboard-outline" class="service-icon"></ion-icon>
+            <span>Strategic Planning: I create strategic plans that align business objectives with the latest energy trends and insights.</span>
+        </li>
+        <li class="service-item">
+            <ion-icon name="stats-chart-outline" class="service-icon"></ion-icon>
+            <span>Data Analysis: I use advanced data analysis tools to interpret energy market data and enhance performance.</span>
+        </li>
+    </ul>
 
-                <h3>What I Do</h3>
-                <ul class="service-list">
-                    <li class="service-item">
-                        <ion-icon name="analytics-outline" class="service-icon"></ion-icon>
-                        <span>Market Research: I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</span>
-                    </li>
-                    <li class="service-item">
-                        <ion-icon name="clipboard-outline" class="service-icon"></ion-icon>
-                        <span>Strategic Planning: I create strategic plans that align business objectives with the latest energy trends and insights.</span>
-                    </li>
-                    <li class="service-item">
-                        <ion-icon name="stats-chart-outline" class="service-icon"></ion-icon>
-                        <span>Data Analysis: I use advanced data analysis tools to interpret energy market data and enhance performance.</span>
-                    </li>
-                </ul>
-            </section>
+    <!-- Get in Touch Button -->
+    <a href="#contact" class="button">Get in Touch</a>
+</section>
+
+<!-- Styling for the Button -->
+<style>
+    .button {
+        display: inline-block;
+        padding: 12px 24px;
+        background-color: #00bcd4;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px;
+        font-weight: bold;
+        transition: background-color 0.3s ease;
+    }
+
+    .button:hover {
+        background-color: #0097a7; /* Slightly darker shade on hover */
+    }
+
+    /* Service List Styles */
+    .service-list {
+        list-style: none;
+        padding: 0;
+    }
+
+    .service-item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 15px;
+    }
+
+    .service-icon {
+        font-size: 36px;
+        margin-right: 10px;
+        color: #00bcd4;
+    }
+</style>
+
 
             <!-- Resume Section -->
             <section id="resume">
