--- a/index.html
+++ b/index.html
@@ -355,6 +355,22 @@
     <a href="#contact" class="button">Get in Touch</a>
 </section>
 
+<!-- Contact Section -->
+<section id="contact">
+    <h2>Contact Me</h2>
+
+    <!-- Contact Form -->
+    <form class="contact-form" method="POST" action="https://formspree.io/f/mrbgbzzy">
+        <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
+        <input type="email" name="email" class="form-input" placeholder="Email address" required>
+        <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
+        <button class="form-btn" type="submit">
+            <ion-icon name="paper-plane"></ion-icon>
+            <span>Send Message</span>
+        </button>
+    </form>
+</section>
+
 <!-- Styling for the Button -->
 <style>
     .button {
@@ -391,6 +407,7 @@
         color: #00bcd4;
     }
 </style>
+
 
 
             <!-- Resume Section -->
