--- a/index.html
+++ b/index.html
@@ -592,23 +592,42 @@
                 </div>
             </section>
 
-            <!-- Contact Section -->
-            <section id="contact">
-                <h2>Contact Form</h2>
-                <form class="contact-form" method="POST" action="https://formspree.io/f/mrbgbzzy">
-                    <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
-                    <input type="email" name="email" class="form-input" placeholder="Email address" required>
-                    <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
-                    <button class="form-btn" type="submit">
-                        <ion-icon name="paper-plane"></ion-icon>
-                        <span>Send Message</span>
-                    </button>
-                </form>
-            </section>
+            
 
-        </div>
 
-    </main>
+<!-- Contact Section -->
+<section id="contact">
+    <h2>Contact Form</h2>
+
+    <!-- Contact Form -->
+    <form class="contact-form" method="POST" action="https://formspree.io/f/mrbgbzzy">
+        <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
+        <input type="email" name="email" class="form-input" placeholder="Email address" required>
+        <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
+        <button class="form-btn" type="submit">
+            <ion-icon name="paper-plane"></ion-icon>
+            <span>Send Message</span>
+        </button>
+    </form>
+
+    <!-- LinkedIn Profile -->
+    <div class="linkedin-profile" style="margin-top: 20px; text-align: center;">
+        <a href="https://www.linkedin.com/in/ahmede-s-99b70314b" target="_blank" style="text-decoration: none; color: #00bcd4;">
+            <ion-icon name="logo-linkedin" style="font-size: 36px;"></ion-icon>
+            <p style="color: #f1f1f1; font-size: 18px;">Connect with me on LinkedIn</p>
+        </a>
+    </div>
+
+    <!-- Map Section -->
+    <div class="map-section" style="margin-top: 20px; text-align: center;">
+        <img src="https://maps.googleapis.com/maps/api/staticmap?center=Greater+Paris+Region,France&zoom=10&size=600x300&key=YOUR_GOOGLE_MAPS_API_KEY" alt="Greater Paris Region Map" style="border-radius: 8px; max-width: 100%; height: auto;">
+    </div>
+</section>
+
+
+
+
+            
 
     <!-- JavaScript Links -->
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
