--- a/index.html
+++ b/index.html
@@ -620,9 +620,13 @@
 
     <!-- Map Section -->
     <div class="map-section" style="margin-top: 20px; text-align: center;">
-        <img src="https://maps.googleapis.com/maps/api/staticmap?center=Greater+Paris+Region,France&zoom=10&size=600x300&key=YOUR_GOOGLE_MAPS_API_KEY" alt="Greater Paris Region Map" style="border-radius: 8px; max-width: 100%; height: auto;">
+        <img src="/mnt/data/A_map_of_the_Greater_Paris_Region,_France,_showing.png" alt="Greater Paris Region Map" style="border-radius: 8px; max-width: 100%; height: auto;">
     </div>
 </section>
+
+<!-- JavaScript Links -->
+<script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 
 
 
