--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 
     <!-- Map Section -->
     <div class="map-section" style="margin-top: 20px; text-align: center;">
-        <img src="/mnt/data/A_map_of_the_Greater_Paris_Region,_France,_showing.png" alt="Greater Paris Region Map" style="border-radius: 8px; max-width: 100%; height: auto;">
+        <img src="assets/Paris.PNG" alt="Greater Paris Region Map" style="border-radius: 8px; max-width: 100%; height: auto;">
     </div>
 </section>
 
