--- a/index.html
+++ b/index.html
@@ -328,33 +328,53 @@
         <!-- Main Content -->
         <div class="main-content">
 
-            <!-- About Section -->
-            <section id="about" class="active">
-                <h2>About Me</h2>
 
-                <p>
-                    I am a passionate and analytical Junior Energy Consultant with a strong foundation in oil and energy,
-                    encompassing both economics and engineering. With a degree in Petroleum Engineering and a Master's in Energy
-                    Technology Economics and Management from IFP School in Paris, I have experience in analyzing business needs
-                    and implementing effective, data-driven solutions.
-                </p>
 
-                <h3>What I Do</h3>
-                <ul class="service-list">
-                    <li class="service-item">
-                        <ion-icon name="analytics-outline" class="service-icon"></ion-icon>
-                        <span>Market Research: I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</span>
-                    </li>
-                    <li class="service-item">
-                        <ion-icon name="clipboard-outline" class="service-icon"></ion-icon>
-                        <span>Strategic Planning: I create strategic plans that align business objectives with the latest energy trends and insights.</span>
-                    </li>
-                    <li class="service-item">
-                        <ion-icon name="stats-chart-outline" class="service-icon"></ion-icon>
-                        <span>Data Analysis: I use advanced data analysis tools to interpret energy market data and enhance performance.</span>
-                    </li>
-                </ul>
-            </section>
+
+
+
+       <!-- About Section -->
+<section id="about" class="active">
+    <h2>About Me</h2>
+
+    <p>
+        I am a passionate and analytical Junior Energy Consultant with a strong foundation in oil and energy,
+        encompassing both economics and engineering. With a degree in Petroleum Engineering and a Master's in Energy
+        Technology Economics and Management from IFP School in Paris, I have experience in analyzing business needs
+        and implementing effective, data-driven solutions.
+    </p>
+
+    <h3>What I Do</h3>
+    <ul class="service-list">
+        <li class="service-item">
+            <ion-icon name="analytics-outline" class="service-icon"></ion-icon>
+            <span>Market Research: I conduct thorough market research to provide valuable insights for decision-making in the energy sector.</span>
+        </li>
+        <li class="service-item">
+            <ion-icon name="clipboard-outline" class="service-icon"></ion-icon>
+            <span>Strategic Planning: I create strategic plans that align business objectives with the latest energy trends and insights.</span>
+        </li>
+        <li class="service-item">
+            <ion-icon name="stats-chart-outline" class="service-icon"></ion-icon>
+            <span>Data Analysis: I use advanced data analysis tools to interpret energy market data and enhance performance.</span>
+        </li>
+    </ul>
+
+    <!-- Get in Touch Button -->
+    <div style="margin-top: 30px; text-align: center;">
+        <a href="#contact" class="button" style="padding: 10px 20px; font-size: 16px; background-color: #00bcd4; color: white; border-radius: 5px; text-decoration: none;">
+            Get in Touch
+        </a>
+    </div>
+</section>
+
+
+
+
+
+
+
+            
 
             <!-- Resume Section -->
             <section id="resume">
