--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
                     </div>
                 </div>
 
-                <!-- Professional Gallery Subsection -->
+                <!-- Gallery Subsection -->
                 <div class="portfolio-subsection">
-                    <h3>Professional Gallery</h3>
+                    <h3> Gallery</h3>
                     <div class="portfolio-gallery">
                         <!-- Images from 1 to 37, excluding 28 and 29 -->
                         <div class="portfolio-item">
