--- a/index.html
+++ b/index.html
@@ -493,14 +493,14 @@
                     <h3>Projects</h3>
                     <div class="project">
                         <h4>Energy Bulletin</h4>
-                        <p>This project focuses on providing insights into energy trends and developments. Explore the project by clicking the button below:</p>
+                        <p>This project focuses on providing insights into energy trends and developments.</p>
                         <a href="https://rise.articulate.com/share/y5pt87b-AsX-KFKZ9Uz7PVwMNYqwoS4B#/lessons/IYfpUVGqmAKYvteIu8VFbbtH6gMaBR26" class="button" target="_blank">See Details</a>
                     </div>
                 </div>
 
-                <!-- Professional Gallery Subsection -->
+                <!-- Gallery Subsection -->
                 <div class="portfolio-subsection">
-                    <h3>Professional Gallery</h3>
+                    <h3>Gallery</h3>
                     <div class="portfolio-gallery">
                         <!-- Images from 1 to 37, excluding 28 and 29 -->
                         <div class="portfolio-item">
@@ -665,6 +665,7 @@
 
         // Show the "About" section by default
         document.getElementById('about').classList.add('active');
+        navbarLinks[0].classList.add('active');
 
         // Toggle details functionality for resume section
         const toggleButtons = document.querySelectorAll('.toggle-details');
