--- a/index.html
+++ b/index.html
@@ -218,6 +218,25 @@
             margin-right: 8px;
         }
 
+
+        
+<!-- Navbar -->
+<nav class="navbar">
+    <ul class="navbar-list">
+        <li><a href="#"><img src="assets/logo.png" alt="ASA Logo" class="logo"></a></li> <!-- Insert your logo here in the first list item -->
+        <li><a href="#" class="navbar-link active" data-nav-link="about">About</a></li>
+        <li><a href="#" class="navbar-link" data-nav-link="resume">Resume</a></li>
+        <li><a href="#" class="navbar-link" data-nav-link="portfolio">Portfolio</a></li>
+        <li><a href="#" class="navbar-link" data-nav-link="contact">Contact</a></li>
+    </ul>
+</nav>
+
+
+
+
+
+
+        
         /* Navbar styling */
         .navbar {
             display: flex;
@@ -240,6 +259,16 @@
             border-radius: 5px;
             text-decoration: none;
         }
+
+
+
+        .logo {
+    width: 100px; /* Adjust the size as needed */
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
 
         .navbar-link.active {
             background-color: #00bcd4;
