--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@
 
         <!-- Sidebar -->
         <aside class="sidebar-info">
-            <img src="assets/AHMEDE-min.jpg" alt="Ahmede Sidi Abderrahmane" class="about-image">
-            <img src="assets/logo.png" alt="ASA Logo" class="logo"> <!-- Your logo inserted here -->
+            <img src="assets/AHMEDE-min.jpg" alt="Ahmede Sidi Abderrahmane" class="about-image">                                                                                                                                                                                                                                                                                                                                                                                                        
+            <img src="assets/logo.jpg" alt="ASA Logo" class="logo"> <!-- Your logo inserted here -->
+
             <h1 class="name">Ahmede Sidi Abderrahmane</h1>
             <p class="title">Junior Energy Consultant</p>
         </aside>
